Fix invisible footer; fixes #2307

--- a/css/styles.css
+++ b/css/styles.css
@@ -2445,13 +2445,15 @@ a.icon_nav_move:hover img {
    position: absolute;
    right: 10px;
    bottom: 0px;
-   height: 40px;
    font-size : 10px;
    font-family: Verdana,Arial,Helvetica,sans-serif;
    font-weight: bold;
 }
 
-#footer-login a {
+#footer-login.home {
+   bottom: 15px;
+}
+#footer-login.home a {
    color: #FFF;
 }
 
